# webcam-project

./: README.md  pyproject.toml
web_cam_project/: __init__.py
